Coloque en mayusculas

--- a/test.html
+++ b/test.html
@@ -25,7 +25,7 @@
         </ul>
     </p>
     <h2> Mis prioridades</h2>
-    <p> son:
+    <p> Son:
         <ol> 
             <li> Rsponsabilidad</li>
             <li>Compromiso</li>
