¨eimie un puntoÂ

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
         trabajo en 
         <strong>
             <i>
-                <a href="https://nuestracasa.com.py/">Nuestra casa.
+                <a href="https://nuestracasa.com.py/">Nuestra casa
                 </a>
             </i>
         </strong>
